deploy/namespaces/medplum/ingress/01-medplum-app-and-api-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: medplum
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: medplum-app
  namespace: medplum
spec:
  entryPoints:
    - web
  routes:
    # API: /api -> medplum-service:80 (targetPort 8103)
    - match: Host(`app.phylcero.fr`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: strip-api-prefix
      services:
        - name: medplum-service
          port: 80

    # UI: / -> medplum-app:3000
    - match: Host(`app.phylcero.fr`)
      kind: Rule
      services:
        - name: medplum-app
          port: 3000
